--- a/app.yaml
+++ b/app.yaml
@@ -1,13 +1,12 @@
-application: leti-3491
+application: leti-3491-bot
 version: 1
 runtime: python27
 api_version: 1
 threadsafe: yes
 
-handlers:
 - url: .*
   script: main.app
 
 libraries:
-- name: jinja2
-  version: "2.6"
+- name: webapp2
+  version: "2.5.2"
